@@ -1,3 +1,7 @@
+31 May 2021 Petasis George <petasis@iit.demokritos.gr>
+ * clarin/app/Http/routes.php: Added some more routes (domain dependent) to
+ support the UI in Angular.
+ 
 28 May 2021 Petasis George <petasis@iit.demokritos.gr>
  * clarin-angular: A new folder, containing a migration from AngularJS to
  Angular. Migration has been done by SEMANTIKA (http://semantika.si/en-us/).
